Updated documentation and makefile
